# ap2pmsg

./: .gitattributes  .gitignore  Cargo.toml  README.md  dummy_peer.c
ap2pcli/: Cargo.toml  build.rs
ap2pcli/src/: bindings.rs  libap2p.rs  main.rs
lib/: build_lib.py  build_lib.sh  libap2p.c  utilap2p.h
src/: lib.rs  main.rs
