[package]
name = "ap2pmsg"
version = "0.13.3"
edition = "2021"

[dependencies]
regex = "1"
time = { version = "0.3.30", features = ["serde", "serde-human-readable", "local-offset", "parsing", "formatting"]}
serde_json = "1.0.1"
serde = { version = "1.0.189", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
rand-unique = { version = "0.2.2", features = ["serde"]}
crossterm = "0.27.0"
env_logger = "0.10.1"
log = "0.4.20"
local-ip-address = "0.5.6"

# todo:
# clear data
# handle requests from unknown peers
# default terminal on windows
# fix messages not displaying (bad query returns) on linux
# ? delete me peer request
# running backend in the background
# inform frontend about failure when creating peer connection
# further optimize big messages
# investigate incorrect initial requests
# 
# get_reader_writer(conn: TcpStream)
# trace logging on lib functions
# look into replacing sqlite with nosql
# close server request
# custom truncating display for MessageContent::File
# 
# change connection adding to use crossterm
# display the correct sender 

